quantum/plugins/rigetti/compiler/generated/QuilParser.cpp

// Generated from Quil.g4 by ANTLR 4.7.2


#include "QuilListener.h"

#include "QuilParser.h"


using namespace antlrcpp;
using namespace quil;
using namespace antlr4;

QuilParser::QuilParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

QuilParser::~QuilParser() {
  delete _interpreter;
}

std::string QuilParser::getGrammarFileName() const {
  return "Quil.g4";
}

const std::vector<std::string>& QuilParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& QuilParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- XaccsrcContext ------------------------------------------------------------------

QuilParser::XaccsrcContext::XaccsrcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<QuilParser::XacckernelContext *> QuilParser::XaccsrcContext::xacckernel() {
  return getRuleContexts<QuilParser::XacckernelContext>();
}

QuilParser::XacckernelContext* QuilParser::XaccsrcContext::xacckernel(size_t i) {
  return getRuleContext<QuilParser::XacckernelContext>(i);
}

std::vector<tree::TerminalNode *> QuilParser::XaccsrcContext::NEWLINE() {
  return getTokens(QuilParser::NEWLINE);
}

tree::TerminalNode* QuilParser::XaccsrcContext::NEWLINE(size_t i) {
  return getToken(QuilParser::NEWLINE, i);
}


size_t QuilParser::XaccsrcContext::getRuleIndex() const {
  return QuilParser::RuleXaccsrc;
}

void QuilParser::XaccsrcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXaccsrc(this);
}

void QuilParser::XaccsrcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXaccsrc(this);
}

QuilParser::XaccsrcContext* QuilParser::xaccsrc() {
  XaccsrcContext *_localctx = _tracker.createInstance<XaccsrcContext>(_ctx, getState());
  enterRule(_localctx, 0, QuilParser::RuleXaccsrc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QuilParser::T__0) {
      setState(92);
      xacckernel();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == QuilParser::NEWLINE) {
        setState(93);
        match(QuilParser::NEWLINE);
        setState(98);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- XacckernelContext ------------------------------------------------------------------

QuilParser::XacckernelContext::XacckernelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QuilParser::XacckernelContext::LPAREN() {
  return getToken(QuilParser::LPAREN, 0);
}

tree::TerminalNode* QuilParser::XacckernelContext::RPAREN() {
  return getToken(QuilParser::RPAREN, 0);
}

QuilParser::QuilContext* QuilParser::XacckernelContext::quil() {
  return getRuleContext<QuilParser::QuilContext>(0);
}

std::vector<tree::TerminalNode *> QuilParser::XacckernelContext::IDENTIFIER() {
  return getTokens(QuilParser::IDENTIFIER);
}

tree::TerminalNode* QuilParser::XacckernelContext::IDENTIFIER(size_t i) {
  return getToken(QuilParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> QuilParser::XacckernelContext::COMMA() {
  return getTokens(QuilParser::COMMA);
}

tree::TerminalNode* QuilParser::XacckernelContext::COMMA(size_t i) {
  return getToken(QuilParser::COMMA, i);
}

std::vector<QuilParser::TypedparamContext *> QuilParser::XacckernelContext::typedparam() {
  return getRuleContexts<QuilParser::TypedparamContext>();
}

QuilParser::TypedparamContext* QuilParser::XacckernelContext::typedparam(size_t i) {
  return getRuleContext<QuilParser::TypedparamContext>(i);
}


size_t QuilParser::XacckernelContext::getRuleIndex() const {
  return QuilParser::RuleXacckernel;
}

void QuilParser::XacckernelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXacckernel(this);
}

void QuilParser::XacckernelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXacckernel(this);
}

QuilParser::XacckernelContext* QuilParser::xacckernel() {
  XacckernelContext *_localctx = _tracker.createInstance<XacckernelContext>(_ctx, getState());
  enterRule(_localctx, 2, QuilParser::RuleXacckernel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(QuilParser::T__0);
    setState(105);
    dynamic_cast<XacckernelContext *>(_localctx)->kernelname = match(QuilParser::IDENTIFIER);
    setState(106);
    match(QuilParser::LPAREN);
    setState(107);
    match(QuilParser::T__1);
    setState(108);
    dynamic_cast<XacckernelContext *>(_localctx)->acceleratorbuffer = match(QuilParser::IDENTIFIER);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QuilParser::COMMA) {
      setState(109);
      match(QuilParser::COMMA);
      setState(110);
      typedparam();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(QuilParser::RPAREN);
    setState(117);
    match(QuilParser::T__2);
    setState(118);
    quil();
    setState(119);
    match(QuilParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypedparamContext ------------------------------------------------------------------

QuilParser::TypedparamContext::TypedparamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QuilParser::TypeContext* QuilParser::TypedparamContext::type() {
  return getRuleContext<QuilParser::TypeContext>(0);
}

tree::TerminalNode* QuilParser::TypedparamContext::IDENTIFIER() {
  return getToken(QuilParser::IDENTIFIER, 0);
}


size_t QuilParser::TypedparamContext::getRuleIndex() const {
  return QuilParser::RuleTypedparam;
}

void QuilParser::TypedparamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypedparam(this);
}

void QuilParser::TypedparamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypedparam(this);
}

QuilParser::TypedparamContext* QuilParser::typedparam() {
  TypedparamContext *_localctx = _tracker.createInstance<TypedparamContext>(_ctx, getState());
  enterRule(_localctx, 4, QuilParser::RuleTypedparam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    type();
    setState(122);
    match(QuilParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

QuilParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t QuilParser::TypeContext::getRuleIndex() const {
  return QuilParser::RuleType;
}

void QuilParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void QuilParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

QuilParser::TypeContext* QuilParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, QuilParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << QuilParser::T__4)
      | (1ULL << QuilParser::T__5)
      | (1ULL << QuilParser::T__6))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KernelcallContext ------------------------------------------------------------------

QuilParser::KernelcallContext::KernelcallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QuilParser::KernelcallContext::LPAREN() {
  return getToken(QuilParser::LPAREN, 0);
}

tree::TerminalNode* QuilParser::KernelcallContext::RPAREN() {
  return getToken(QuilParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> QuilParser::KernelcallContext::IDENTIFIER() {
  return getTokens(QuilParser::IDENTIFIER);
}

tree::TerminalNode* QuilParser::KernelcallContext::IDENTIFIER(size_t i) {
  return getToken(QuilParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> QuilParser::KernelcallContext::COMMA() {
  return getTokens(QuilParser::COMMA);
}

tree::TerminalNode* QuilParser::KernelcallContext::COMMA(size_t i) {
  return getToken(QuilParser::COMMA, i);
}


size_t QuilParser::KernelcallContext::getRuleIndex() const {
  return QuilParser::RuleKernelcall;
}

void QuilParser::KernelcallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKernelcall(this);
}

void QuilParser::KernelcallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKernelcall(this);
}

QuilParser::KernelcallContext* QuilParser::kernelcall() {
  KernelcallContext *_localctx = _tracker.createInstance<KernelcallContext>(_ctx, getState());
  enterRule(_localctx, 8, QuilParser::RuleKernelcall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    dynamic_cast<KernelcallContext *>(_localctx)->kernelname = match(QuilParser::IDENTIFIER);
    setState(127);
    match(QuilParser::LPAREN);
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == QuilParser::IDENTIFIER) {
      setState(128);
      match(QuilParser::IDENTIFIER);
    }
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QuilParser::COMMA) {
      setState(131);
      match(QuilParser::COMMA);
      setState(132);
      match(QuilParser::IDENTIFIER);
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(138);
    match(QuilParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuilContext ------------------------------------------------------------------

QuilParser::QuilContext::QuilContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<QuilParser::AllInstrContext *> QuilParser::QuilContext::allInstr() {
  return getRuleContexts<QuilParser::AllInstrContext>();
}

QuilParser::AllInstrContext* QuilParser::QuilContext::allInstr(size_t i) {
  return getRuleContext<QuilParser::AllInstrContext>(i);
}

std::vector<tree::TerminalNode *> QuilParser::QuilContext::NEWLINE() {
  return getTokens(QuilParser::NEWLINE);
}

tree::TerminalNode* QuilParser::QuilContext::NEWLINE(size_t i) {
  return getToken(QuilParser::NEWLINE, i);
}


size_t QuilParser::QuilContext::getRuleIndex() const {
  return QuilParser::RuleQuil;
}

void QuilParser::QuilContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuil(this);
}

void QuilParser::QuilContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuil(this);
}

QuilParser::QuilContext* QuilParser::quil() {
  QuilContext *_localctx = _tracker.createInstance<QuilContext>(_ctx, getState());
  enterRule(_localctx, 10, QuilParser::RuleQuil);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(141);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << QuilParser::DEFGATE)
      | (1ULL << QuilParser::DEFCIRCUIT)
      | (1ULL << QuilParser::MEASURE)
      | (1ULL << QuilParser::LABEL)
      | (1ULL << QuilParser::HALT)
      | (1ULL << QuilParser::JUMP)
      | (1ULL << QuilParser::JUMPWHEN)
      | (1ULL << QuilParser::JUMPUNLESS)
      | (1ULL << QuilParser::RESET)
      | (1ULL << QuilParser::WAIT)
      | (1ULL << QuilParser::NOP)
      | (1ULL << QuilParser::INCLUDE)
      | (1ULL << QuilParser::PRAGMA)
      | (1ULL << QuilParser::FALSE)
      | (1ULL << QuilParser::TRUE)
      | (1ULL << QuilParser::NOT)
      | (1ULL << QuilParser::AND)
      | (1ULL << QuilParser::OR)
      | (1ULL << QuilParser::MOVE)
      | (1ULL << QuilParser::EXCHANGE)
      | (1ULL << QuilParser::IDENTIFIER))) != 0)) {
      setState(140);
      allInstr();
    }
    setState(151);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(144); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(143);
          match(QuilParser::NEWLINE);
          setState(146); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == QuilParser::NEWLINE);
        setState(148);
        allInstr(); 
      }
      setState(153);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
    setState(157);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QuilParser::NEWLINE) {
      setState(154);
      match(QuilParser::NEWLINE);
      setState(159);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AllInstrContext ------------------------------------------------------------------

QuilParser::AllInstrContext::AllInstrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QuilParser::DefGateContext* QuilParser::AllInstrContext::defGate() {
  return getRuleContext<QuilParser::DefGateContext>(0);
}

QuilParser::DefCircuitContext* QuilParser::AllInstrContext::defCircuit() {
  return getRuleContext<QuilParser::DefCircuitContext>(0);
}

QuilParser::InstrContext* QuilParser::AllInstrContext::instr() {
  return getRuleContext<QuilParser::InstrContext>(0);
}

QuilParser::KernelcallContext* QuilParser::AllInstrContext::kernelcall() {
  return getRuleContext<QuilParser::KernelcallContext>(0);
}


size_t QuilParser::AllInstrContext::getRuleIndex() const {
  return QuilParser::RuleAllInstr;
}

void QuilParser::AllInstrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAllInstr(this);
}

void QuilParser::AllInstrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAllInstr(this);
}

QuilParser::AllInstrContext* QuilParser::allInstr() {
  AllInstrContext *_localctx = _tracker.createInstance<AllInstrContext>(_ctx, getState());
  enterRule(_localctx, 12, QuilParser::RuleAllInstr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(164);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(160);
      defGate();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(161);
      defCircuit();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(162);
      instr();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(163);
      kernelcall();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstrContext ------------------------------------------------------------------

QuilParser::InstrContext::InstrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QuilParser::GateContext* QuilParser::InstrContext::gate() {
  return getRuleContext<QuilParser::GateContext>(0);
}

QuilParser::MeasureContext* QuilParser::InstrContext::measure() {
  return getRuleContext<QuilParser::MeasureContext>(0);
}

QuilParser::DefLabelContext* QuilParser::InstrContext::defLabel() {
  return getRuleContext<QuilParser::DefLabelContext>(0);
}

QuilParser::HaltContext* QuilParser::InstrContext::halt() {
  return getRuleContext<QuilParser::HaltContext>(0);
}

QuilParser::JumpContext* QuilParser::InstrContext::jump() {
  return getRuleContext<QuilParser::JumpContext>(0);
}

QuilParser::JumpWhenContext* QuilParser::InstrContext::jumpWhen() {
  return getRuleContext<QuilParser::JumpWhenContext>(0);
}

QuilParser::JumpUnlessContext* QuilParser::InstrContext::jumpUnless() {
  return getRuleContext<QuilParser::JumpUnlessContext>(0);
}

QuilParser::ResetStateContext* QuilParser::InstrContext::resetState() {
  return getRuleContext<QuilParser::ResetStateContext>(0);
}

QuilParser::WaitContext* QuilParser::InstrContext::wait() {
  return getRuleContext<QuilParser::WaitContext>(0);
}

QuilParser::ClassicalUnaryContext* QuilParser::InstrContext::classicalUnary() {
  return getRuleContext<QuilParser::ClassicalUnaryContext>(0);
}

QuilParser::ClassicalBinaryContext* QuilParser::InstrContext::classicalBinary() {
  return getRuleContext<QuilParser::ClassicalBinaryContext>(0);
}

QuilParser::NopContext* QuilParser::InstrContext::nop() {
  return getRuleContext<QuilParser::NopContext>(0);
}

QuilParser::IncludeContext* QuilParser::InstrContext::include() {
  return getRuleContext<QuilParser::IncludeContext>(0);
}

QuilParser::PragmaContext* QuilParser::InstrContext::pragma() {
  return getRuleContext<QuilParser::PragmaContext>(0);
}


size_t QuilParser::InstrContext::getRuleIndex() const {
  return QuilParser::RuleInstr;
}

void QuilParser::InstrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstr(this);
}

void QuilParser::InstrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstr(this);
}

QuilParser::InstrContext* QuilParser::instr() {
  InstrContext *_localctx = _tracker.createInstance<InstrContext>(_ctx, getState());
  enterRule(_localctx, 14, QuilParser::RuleInstr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(180);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QuilParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(166);
        gate();
        break;
      }

      case QuilParser::MEASURE: {
        enterOuterAlt(_localctx, 2);
        setState(167);
        measure();
        break;
      }

      case QuilParser::LABEL: {
        enterOuterAlt(_localctx, 3);
        setState(168);
        defLabel();
        break;
      }

      case QuilParser::HALT: {
        enterOuterAlt(_localctx, 4);
        setState(169);
        halt();
        break;
      }

      case QuilParser::JUMP: {
        enterOuterAlt(_localctx, 5);
        setState(170);
        jump();
        break;
      }

      case QuilParser::JUMPWHEN: {
        enterOuterAlt(_localctx, 6);
        setState(171);
        jumpWhen();
        break;
      }

      case QuilParser::JUMPUNLESS: {
        enterOuterAlt(_localctx, 7);
        setState(172);
        jumpUnless();
        break;
      }

      case QuilParser::RESET: {
        enterOuterAlt(_localctx, 8);
        setState(173);
        resetState();
        break;
      }

      case QuilParser::WAIT: {
        enterOuterAlt(_localctx, 9);
        setState(174);
        wait();
        break;
      }

      case QuilParser::FALSE:
      case QuilParser::TRUE:
      case QuilParser::NOT: {
        enterOuterAlt(_localctx, 10);
        setState(175);
        classicalUnary();
        break;
      }

      case QuilParser::AND:
      case QuilParser::OR:
      case QuilParser::MOVE:
      case QuilParser::EXCHANGE: {
        enterOuterAlt(_localctx, 11);
        setState(176);
        classicalBinary();
        break;
      }

      case QuilParser::NOP: {
        enterOuterAlt(_localctx, 12);
        setState(177);
        nop();
        break;
      }

      case QuilParser::INCLUDE: {
        enterOuterAlt(_localctx, 13);
        setState(178);
        include();
        break;
      }

      case QuilParser::PRAGMA: {
        enterOuterAlt(_localctx, 14);
        setState(179);
        pragma();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateContext ------------------------------------------------------------------

QuilParser::GateContext::GateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QuilParser::NameContext* QuilParser::GateContext::name() {
  return getRuleContext<QuilParser::NameContext>(0);
}

tree::TerminalNode* QuilParser::GateContext::LPAREN() {
  return getToken(QuilParser::LPAREN, 0);
}

std::vector<QuilParser::ParamContext *> QuilParser::GateContext::param() {
  return getRuleContexts<QuilParser::ParamContext>();
}

QuilParser::ParamContext* QuilParser::GateContext::param(size_t i) {
  return getRuleContext<QuilParser::ParamContext>(i);
}

tree::TerminalNode* QuilParser::GateContext::RPAREN() {
  return getToken(QuilParser::RPAREN, 0);
}

std::vector<QuilParser::QubitContext *> QuilParser::GateContext::qubit() {
  return getRuleContexts<QuilParser::QubitContext>();
}

QuilParser::QubitContext* QuilParser::GateContext::qubit(size_t i) {
  return getRuleContext<QuilParser::QubitContext>(i);
}

std::vector<tree::TerminalNode *> QuilParser::GateContext::COMMA() {
  return getTokens(QuilParser::COMMA);
}

tree::TerminalNode* QuilParser::GateContext::COMMA(size_t i) {
  return getToken(QuilParser::COMMA, i);
}


size_t QuilParser::GateContext::getRuleIndex() const {
  return QuilParser::RuleGate;
}

void QuilParser::GateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGate(this);
}

void QuilParser::GateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QuilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGate(this);
}

QuilParser::GateContext* QuilParser::gate() {
  GateContext *_localctx = _tracker.createInstance<GateContext>(_ctx, getState());
  enterRule(_localctx, 16, QuilParser::RuleGate);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(182);
    name();
    setState(194);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == QuilParser::LPAREN) {
      setState(183);
      match(QuilParser::LPAREN);
      setState(184);
      param();
      setState(189);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == QuilParser::COMMA) {
        setState(185);
        match(QuilParser::COMMA);
        setState(186);
        param();
        setState(191);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(192);
      match(QuilParser::RPAREN);
    }
    setState(197); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(196);
      qubit();
      setState(199); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == QuilParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

QuilParser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QuilParser::NameContext::IDENTIFIER() {
  return getToken(QuilParser::IDENTIFIER, 0);
}


size_t QuilParser::NameContext::getRuleIndex() const {
  return QuilParser::RuleName;
}
